[gd_scene load_steps=6 format=3 uid="uid://v7on45dtyw0d"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_bp5ji"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hw5f7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_07ag6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_v370r"]
radius = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_alhtc"]
size = Vector3(2.04712, 1, 7)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_bp5ji")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_hw5f7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_07ag6")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
current = true

[node name="Area3D" type="Area3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/Area3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 1.6)
shape = SubResource("SphereShape3D_v370r")

[node name="Area3D2" type="Area3D" parent="Head/Camera3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
shape = SubResource("BoxShape3D_alhtc")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_energy = 0.5
light_volumetric_fog_energy = 2.0
omni_range = 3.32161

[connection signal="area_entered" from="Head/Camera3D/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Head/Camera3D/Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Head/Camera3D/Area3D2" to="." method="_on_area_3d_2_body_entered"]
